# Neuro-Hackathon-2024

./: .env  .gitignore  README.md  collect_data.ipynb  finalized_model.sav  finalized_model_l1_C=1e-7.sav  finalized_model_l1_C=5e-7.sav  finalized_model_l2.sav  find_best_genre.ipynb  get_data.ipynb  main.py  ml_stuff.ipynb  ml_test.ipynb  plan.txt  pyproject.toml  questionnaire.ipynb
app/: main.py
app/static/: styles.css
app/templates/: main.css  music_results.html  music_test.html  no_music_test.html  results.html  survey.html
app/util/: concentration.py  music.py
concentration_data/: N_1.csv  N_10.csv  N_11.csv  N_12.csv  N_13.csv  N_14.csv  N_15.csv  N_16.csv  N_17.csv  N_18.csv  N_19.csv  N_2.csv  N_20.csv  N_3.csv  N_4.csv  N_5.csv  N_6.csv  N_7.csv  N_8.csv  N_9.csv  Y_1.csv  Y_10.csv  Y_11.csv  Y_12.csv  Y_13.csv  Y_14.csv  Y_15.csv  Y_16.csv  Y_17.csv  Y_18.csv  Y_19.csv  Y_2.csv  Y_20.csv  Y_3.csv  Y_4.csv  Y_5.csv  Y_6.csv  Y_7.csv  Y_8.csv  Y_9.csv
