[tool.poetry]
name = "openbci2"
version = "0.1.0"
description = ""
authors = ["Ray Chen <raychen256@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
brainflow = "^5.12.1"
setuptools = "^69.1.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
